# chatroom

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  clientui  cmake_install.cmake  serverui
.TEMP_frank/: TIMIT.zip.torrent  images.qrc  ippicv.txt
chatroom_autogen/UVLADIE3JM/: moc_tabpage.cpp  moc_thread_client.cpp  moc_thread_server.cpp
chatroom_autogen/include/: ui_mainwindow_client.h  ui_mainwindow_server.h
clientui_autogen/: moc_predefs.h  mocs_compilation.cpp
clientui_autogen/3YJK5W5UP7/: qrc_images.cpp
clientui_autogen/UVLADIE3JM/: moc_mainwindow_server.cpp
include/: utils.h
include/client/: login_dialog.h  login_dialog.ui  mainwindow_client.h  mainwindow_client.ui  qtabbar_h.h  register_dialog.h  register_dialog.ui  tabpage.h  tabpage.ui  thread_client.h
include/server/: mainwindow_server.h  mainwindow_server.ui  mysql_utils.h  redis_utils.h  thread_pool.h  thread_server.h
resources/: images.qrc
serverui_autogen/UVLADIE3JM/: moc_mainwindow_client.cpp
serverui_autogen/include/: ui_tabpage.h
src/: common_.cpp  common_.h  main_client.cpp  main_server.cpp  mainwindow_client.cpp  mainwindow_client.h  mainwindow_client.ui  mainwindow_server.cpp  mainwindow_server.h  mainwindow_server.ui  tabpage.cpp  tabpage.h  tabpage.ui  thread_client.cpp  thread_client.h  thread_server.cpp  thread_server.h  utils.cpp  utils.h
src/client/: login_dialog.cpp  mainwindow_client.cpp  qtabbar_h.cpp  register_dialog.cpp  tabpage.cpp  thread_client.cpp
src/server/: mainwindow_server.cpp  mysql_utils.cpp  redis_utils.cpp  thread_server.cpp
